# position_collector

./: CMakeLists.txt  run.sh
python/: anchors.py  pozyx_localize.py  print_positions.py  print_positions_sequential.py  print_positions_thread.py
python/ros/: csv_to_bag.py  path_publisher_node.py
python/scripts/: change_uwb_settings.py  measure_error.py  plot_correlations.py  plot_regression.py  regression.py
results/2018-04-15/: relative-6939.csv  relative-6957.csv  relative-6e19.csv  relative-6e4a.csv  relative-6e4a.ods
results/2018-04-18/shapes/: f8-relative.csv  f8.csv  x-relative.csv  x.csv  y.csv  z-relative.csv  z.csv
results/2018-04-19/: circle_xy.csv  circle_xy_raw.csv  circle_yz.csv  circle_yz_raw.csv  figure_8_raw.csv  rate_test.csv  rate_test2.csv
results/steady/: 6939.csv  VR.csv  raw.csv
scripts/: convert_coordinates.rb
src/: main.cpp  position.h  pozyx_position.cpp  pozyx_position.h  rate_printer.cpp  rate_printer.h  vr_position.cpp  vr_position.h
